// =============================================================
// Oscar AMPAS — Winner Demographics
// Modelo ER — Disciplina: Banco de Dados — DCC/UFMG
// Visualizar em: https://dbdiagram.io
// =============================================================

Table vencedor {
  id_vencedor      integer     [primary key]
  nome             varchar     [not null]
  ano_nascimento   integer
  pais_nascimento varchar     [ref: > pais.nome_pais]
  etnia            varchar     [not null, ref: > etnia.nome_etnia]
  religiao         varchar     [note: 'nullable — 62% ausente no dataset', ref: > religiao.nome_religiao]
  orient_sexual    varchar     [note: 'nullable — "Na" tratado como NULL', ref: > orientacao_sexual.nome_orient]
}

Table filme {
  id_filme integer [primary key]
  titulo   varchar [not null]
}

Table categoria {
  id_categoria integer [pk]
  nome         varchar [not null, note: 'Best Actress | Best Actor | Best Director | Best Supporting Actor | Best Supporting Actress']
}

Table edicao {
  id_edicao integer [pk]
  ano       integer [not null, note: 'ano da cerimônia — 1927 a 2014']
}

Table premio {
  id_premio    integer [pk]
  id_vencedor  integer [not null, ref: > vencedor.id_vencedor]
  id_filme     integer [not null, ref: > filme.id_filme]
  id_categoria integer [not null, ref: > categoria.id_categoria]
  id_edicao    integer [not null, ref: > edicao.id_edicao]
}

Table orientacao_sexual {
  nome_orient varchar [pk]
}

Table religiao {
  nome_religiao varchar [pk]
}

Table etnia {
  nome_etnia varchar [pk]
}

Table pais {
  nome_pais varchar [pk]
}